Updated according to mentor comments